2012-07-02  David Gilbert <david.gilbert@object-refinery.com>

    Translations by Leo Leung:
    * org/jfree/chart/LocalisationBundle_ja.properties: New translation file;
    * org/jfree/chart/editor/LocalisationBundle_ja.properties: Likewise;
    * org/jfree/chart/plot/LocalisationBundle_ja.properties: Likewise.

2012-07-01  David Gilbert <david.gilbert@object-refinery.com>

    * org/jfree/chart/plot/PiePlot.java
    (drawSimpleLabels): Generate label once only (DG);

2012-07-01  David Gilbert <david.gilbert@object-refinery.com>

    Bug 3521736 (optimisation)
    * org/jfree/chart/renderer/xy/DeviationRenderer.java
    (drawItem): Provide initial capacity for GeneralPath.

2012-06-11  David Gilbert <david.gilbert@object-refinery.com>

    Patch 3204823 by DaveLaw
    * org/jfree/chart/plot/PiePlot3D.java
    (drawSide): Use new PaintAlpha class,
    * org/jfree/chart/renderer/category/BarRenderer3D.java
    (drawItem): Likewise,
    * org/jfree/chart/renderer/category/StackedBarRenderer3D.java
    (drawStackHorizontal): Likewise,
    (drawStackVertical): Likewise,
    * org/jfree/chart/util/PaintAlpha.java: New class.

2012-05-10  David Gilbert <david.gilbert@object-refinery.com>

    * org/jfree/chart/renderer/xy/XYBarRenderer.java
    (findDomainBounds): call new method in super-class to take account of
    non-visible series,
    (findRangeBounds): likewise;
    * tests/org/jfree/chart/renderer/xy/junit/XYBarRendererTests.java
    (testFindDomainBounds2): new test;
    (testFindRangeBounds2): Likewise.

2012-03-11  Martin Hoeller <martin.hoeller@xss.co.at>

    Patch 3500621 by Simon Kaczor
    * org/jfree/chart/title/LegendTitle
    (sortOrder): New field,
    (getSortOrder): New method,
    (setSortOrder): Likewise,
    (fetchLgendItems): Updated to support new sort order,
    (equals): Likewise.
    * tests/org/jfree/chart/title/LegendTitle
    (testEquals): Adapted for new field.

2012-02-13  Martin Hoeller <martin.hoeller@xss.co.at>
