@@ -1,3 +1,8 @@
+2012-07-05  David Gilbert <david.gilbert@object-refinery.com>
+
+    * org/jfree/chart/ChartPanel.java
+    (setMouseWheelEnabled): Remove reflection only needed for JRE 1.3.1.
+
 2012-07-02  David Gilbert <david.gilbert@object-refinery.com>
 
     Translations by Leo Leung:
